# in-code-we-rust

./: .gitignore  Cargo.toml  README.md
crates/_01-file-option-result/: Cargo.toml
crates/_01-file-option-result/examples/: solution.rs
crates/_01-file-option-result/src/: lib.rs  main.rs
crates/exercise-01/: Cargo.toml  README.md
crates/exercise-01/examples/: solution.rs  solution2.rs
crates/exercise-02/: Cargo.toml  README.md
crates/exercise-02/src/: lib.rs
crates/exercise-03/: Cargo.toml  README.md
crates/exercise-03/examples/: solution.rs  solution1.rs  solution2.rs
crates/exercise-03/src/: lib.rs  main.rs
crates/exercise-04/: Cargo.toml  README.md
crates/exercise-04/examples/: solution1.rs  solution1a.rs  solution2.rs  solution3.rs
crates/exercise-04/src/: lib.rs  main.rs
crates/exercise-05/: Cargo.toml  README.md
crates/exercise-05/examples/: solution.rs
crates/exercise-05/src/: lib.rs  main.rs
crates/exercise-06/: Cargo.toml  README.md
crates/exercise-06/examples/: solution01.rs  solution02.rs  solution03.rs  solution_client.rs  solution_client_cli.rs
crates/exercise-06/src/: main.rs
crates/exercise-06/tests/: client.rs
crates/exercise-07/: Cargo.toml  README.md
crates/exercise-07/examples/: solution1.rs  solution2.rs  solution3.rs  solution4.rs
crates/exercise-07/src/: main.rs
crates/exercise-08/: README.md
crates/exercise-09/: README.md
crates/exercise-10/: Cargo.toml  README.md
crates/exercise-11/: README.md
crates/exercise-12/: README.md
crates/lesson-01/: Cargo.toml  input.txt
(+5 files in other folders)
